fixed table print layout problem

--- a/resources/assets/backend/sass/report.scss
+++ b/resources/assets/backend/sass/report.scss
@@ -419,6 +419,7 @@ table {
 
 table {
   background-color: transparent;
+  table-layout: fixed;
 }
 table {
   border-collapse: collapse;
